expense, customer and cancelation distortion fix

--- a/src/styles/components/shared/nav-main/_menu-item-with-submenu.scss
+++ b/src/styles/components/shared/nav-main/_menu-item-with-submenu.scss
@@ -75,5 +75,6 @@
 	.submenu-close {
 		margin-left: 75%;
 		margin-bottom: 139px;
+		cursor: pointer;
 	}
 }
