--- a/src/styles/components/views/customer/_customer-list.scss
+++ b/src/styles/components/views/customer/_customer-list.scss
@@ -110,6 +110,6 @@
 
 .alignChartOfAccount {
 	position: absolute;
-	left: 253px;
+	left: 220px;
 	right: 32px;
 }
