--- a/src/styles/components/views/expense/_expense-list.scss
+++ b/src/styles/components/views/expense/_expense-list.scss
@@ -145,8 +145,7 @@
 }
 
 .alignLeftExpense {
+	left: 220px;
 	position: absolute;
-	width: calc(100% - 289px);
-	left: 257px;
 	right: 32px;
 }
